--- a/src/App.css
+++ b/src/App.css
@@ -1292,7 +1292,7 @@ font-weight: 400;
  
   .home_main {
     width: 100%;
-    height: 100vh;
+    height: 100--vh;
        background-position:center center ;
        background-size: 50%;
     display: flex;
