--- a/src/App.css
+++ b/src/App.css
@@ -504,6 +504,7 @@ box-sizing: border-box;
   grid-column-end: auto;
   grid-row-start: row2;
   grid-row-end: span 3;
+  backdrop-filter: blur(1px);
   }
   .main_content_mobile {
     display: none;
@@ -1069,7 +1070,7 @@ animation-delay: 0.4s;
   height: 15px;
   width: 15px;
   margin: 0 5px;
-  background-color: #bbb;
+  background-color: rgb(83, 83, 83);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -1321,7 +1322,7 @@ font-weight: 400;
   
     width: 90%;
     height: 80%;
-    background-color: #ffffff4d;
+    background-color: #ffffffcc;
     border-radius: 5px;
    box-sizing: border-box;
     box-shadow: 5px 5px  10px rgb(0, 0, 0), -5px 5px 10px rgb(0, 0, 0);
@@ -1737,11 +1738,12 @@ border-right: 0px solid #53535300;
 .main_content_mobile {
   display: grid;
   width: 100%;
-  height: 70vh;
+  height: 90vh;
   grid-column-start: first;
   grid-column-end: auto;
   grid-row-start: row2;
   grid-row-end: span 1;
+  backdrop-filter: blur(5px);
   }
   
   .main_content {
