--- a/src/App.css
+++ b/src/App.css
@@ -381,7 +381,7 @@ margin-top: 20px;
   font-size: 10pt;
   letter-spacing: 0.1ch;
   font-weight: 200;
-  background-color: #940000;
+  background: linear-gradient(to bottom right, #940000, #a00539);
   border: none;
   outline: hidden;
   color: #f5f5f5;
@@ -396,6 +396,26 @@ margin-top: 20px;
 }
 
 
+.lilsat {
+  width: 60px;
+  opacity: 50%;
+  position: absolute;
+  top: 40%;
+  left: 150%;
+  animation: shootsat 10s;
+  animation-delay: 30s;
+}
+@keyframes shootsat
+{
+    0% {
+        left: 150%;
+    }
+
+    100% {
+        left: -50%;
+        top: -20%;
+    }
+}
 .contact-main {
   width:85vw;
   height: 100vh;
