--- a/src/App.css
+++ b/src/App.css
@@ -208,8 +208,18 @@ flex-flow: column;
 margin-top: 3%;
 margin-bottom: 3%;
 border-right: 1px solid #acacac4f;
+position: relative;
 }
 
+.fine-print {
+position: absolute;
+bottom: -3%;
+text-align: center;
+color:rgb(94, 94, 94);
+font-size: 0.6vw;
+font-family: 'Open Sans', sans-serif;
+    font-weight: 200;
+}
 
 .home_main {
   width: 100%;
@@ -1291,6 +1301,10 @@ margin-top: 0;
     display: none;
   }
 
+
+.fine-print {
+  display: none;
+}
 
   .next-slide {
     display: none;
