--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,8 @@ grid-template-areas: "blank  blank"
                      "header  body"
                      "blank  body";
 overflow: hidden;
+-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 .header_container {
@@ -161,7 +163,7 @@ height: 160px;
     color: #535353;
     text-align: center;
     transition: 0.6s ease;
-    cursor: pointer;
+    /* cursor: pointer; */
     text-decoration: none;
     height: 100%;
     display: inline-flex;
@@ -2107,7 +2109,7 @@ bottom: 25%;
     display: grid;
     grid-template-columns: [first] 15% [second] 85% [third] 0;
     grid-template-rows: [row1] 100% ;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     
   }
 
