--- a/src/App.css
+++ b/src/App.css
@@ -534,6 +534,50 @@ margin-top: 20px;
   } */
 
 
+.download-resume {
+  margin-top: 25px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 10pt;
+  letter-spacing: 0.1ch;
+  font-weight: 200;
+  background: linear-gradient(to bottom right, #940000, #a00539);
+  border: none;
+  outline: hidden;
+  color: #f5f5f5;
+margin-bottom: 5%;
+  padding: 1%;
+  border-radius: 5px;
+  text-align: center;
+align-self: center;
+ cursor: pointer;
+ position: relative;
+ z-index: 2;
+}
+
+.download-resume::before {
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+
+.download-resume:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.download-resume::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  inset: 0 0 0 0;
+  background: linear-gradient(to bottom right, #d31212, #b1305b);
+  z-index: -1;
+  transition: transform .6s ease;
+  border-radius: 5px;
+}
+
+
+
 .portfolio_content {
 width: 100%;
 height: 100%;
@@ -1318,7 +1362,7 @@ margin-top: 0;
 
 
   .face {
-    width: 100px;
+    width: 80px;
     justify-content: center;
     padding: 5px;
     box-sizing: border-box;
