--- a/src/App.css
+++ b/src/App.css
@@ -3231,3 +3231,12 @@ align-items: center;
       }
 
   
+      @media only screen and (max-width: 500px) and (max-height: 500px)  {
+
+.contact-info{
+  display: none;
+}
+
+
+
+      }
