--- a/src/DarkApp.css
+++ b/src/DarkApp.css
@@ -580,13 +580,13 @@ margin-top: 20px;
     }
 }
 .contact-main {
-  width:85vw;
-  
+  width:100%;
+  height: 100%;
   display: flex;
   flex-flow: column;
 justify-content: space-between;
   align-items: left;
-  padding: 6%;
+  padding: 6% 0% 6% 6%;
   -webkit-animation: text-focus-in 0.4s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 animation: text-focus-in 0.4s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -599,10 +599,10 @@ animation: text-focus-in 0.4s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 
 
 .darkcontact-info{
-  width: 80vw;
+  width: 30vw;
   display: flex;
   flex-flow: column;
-  align-self: center;
+  align-self: left;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -1316,6 +1316,17 @@ animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   overflow: hidden;
 }
 
+.contact-megamain {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: left;
+  position: relative;
+  overflow: hidden;
+}
+
 @-webkit-keyframes color-change-3x {
   0% {
     background: #b40303;
@@ -1877,10 +1888,10 @@ left: 5%;
 
   .contact-main {
     width: 100vw;
-    height: 70%;
+    /* height: 70%; */
     display: grid;
     grid-template-columns: [xcol1] 100%;
-    grid-template-rows: [xrow1] 70% [xrow2] 30%;
+    grid-template-rows: [xrow1] 50% [xrow2] 30%;
     grid-template-areas: "messageme"
                          "contactinfo"
                         ;
@@ -2010,7 +2021,7 @@ box-sizing: border-box;
     grid-template-columns: [first]auto;
     overflow-y: scroll;
    box-sizing: border-box;
-   margin-top: 5%;
+   margin-top: 15%;
  
   }
   
@@ -2856,6 +2867,8 @@ margin-top: 0;
   padding-left: 0%;
 }
 
+
+
         .contact-main {
           width: 85vw;
           height: 100%;
@@ -2865,6 +2878,7 @@ margin-top: 0;
           place-content: center;
           
         }
+        
 
         .messageme-form  {
           width: 100%;
@@ -3214,6 +3228,11 @@ align-items: center;
      
       }
 .testimonials_main {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+.contact-megamain {
   height: 100%;
   padding: 0;
   margin: 0;
