--- a/src/DarkApp.css
+++ b/src/DarkApp.css
@@ -328,7 +328,7 @@ font-size: 2.0vw;
 font-weight: 600;
 -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-animation-delay: 0.6s;
+animation-delay: 0.0s;
 padding: 0px;
 margin: 0px;
 
@@ -342,7 +342,7 @@ font-size: 2.0vw;
 font-weight: 600;
 -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-animation-delay: 2.6s; 
+animation-delay: 0s; 
 padding: 0px;
 margin: 0px;
   }
@@ -352,7 +352,7 @@ margin: 0px;
   height: 15%;
     -webkit-animation: text-focus-in 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-  animation-delay: 3.2s;
+  animation-delay: 0s;
   padding: 0px;
 margin: 5px 0px 0px 5px;
 
@@ -423,7 +423,7 @@ margin: 5px 0px 0px 5px;
     font-weight: 200;
     -webkit-animation: text-focus-in 0.8s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     animation: text-focus-in 0.8s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-    animation-delay: 6.6s;
+    animation-delay: 0s;
     padding-top: 50px;
 margin-top: 20px;
   }
@@ -455,6 +455,12 @@ margin-top: 20px;
   -webkit-animation: fade-in 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   animation: fade-in 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   animation-delay: 8.6s;
+  border-radius: 5px;
+}
+.darkportfolio-button-container {
+  -webkit-animation: fade-in 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation: fade-in 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation-delay: 0s;
   border-radius: 5px;
 }
 
